cleanup Rs2Walker